--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <div class="js-clock">
       <h1 class="js-title">00:00</h1>
     </div>
+    <form class="js-form form">
+      <input type="text" placeholder="what is your name?" />
+    </form>
+    <h4 class="js-greetings greetings"></h4>
     <script src="index.js"></script>
     <script src="clock.js"></script>
+    <script src="greetings.js"></script>
   </body>
 </html>
