--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
       <input type="text" placeholder="what is your name?" />
     </form>
     <h4 class="js-greetings greetings"></h4>
+    <form class="js-toDoForm">
+      <input type="text" placeholder="Write a to do" />
+    </form>
+    <ul class="js-toDoList"></ul>
     <script src="index.js"></script>
     <script src="clock.js"></script>
     <script src="greetings.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
