--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
       <input type="text" placeholder="Write a to do" />
     </form>
     <ul class="js-toDoList"></ul>
+    <span class="js-weather"></span>
     <script src="index.js"></script>
     <script src="clock.js"></script>
     <script src="greetings.js"></script>
     <script src="todo.js"></script>
     <script src="bg.js"></script>
+    <script src="weather.js"></script>
   </body>
 </html>
